syntax="proto3";

package dynamic_service;
option go_package="genproto/dynamic_service";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service DynamicService {
    rpc CreateGroup(Group) returns (Group) {}
    rpc UpdateGroup(Group) returns (Group) {}
    rpc DeleteGroup(GetByIdRequest) returns (google.protobuf.Empty) {}
    rpc GetGroupById(GetByIdRequest) returns (Group) {}
    rpc GetAllGroup(GetAllGroupRequest) returns (GetAllGroupResponse) {}
    rpc CreateField(Field) returns (Field) {}
    rpc UpdateField(Field) returns (Field) {}
    rpc DeleteField(GetByIdRequest) returns (google.protobuf.Empty) {}
    rpc GetFieldById(GetByIdRequest) returns (Field) {}
    rpc GetAllField(GetAllFieldRequest) returns (GetAllFieldResponse) {}
    rpc GetFullGroup(GetByIdRequest) returns (Group) {}
}

message Group {
    string _id = 1;
    string name = 2;
    string description = 3;
    string slug = 4;
    int32 status = 5;
    string created_at = 6;
    int32 order_number = 7;
    google.protobuf.StringValue parent_id = 8;
    repeated Group children = 9;
    repeated Field fields = 10;
    string updated_at = 11;
    int32 group_type = 12;
}

message GetByIdRequest {
    string _id = 1;
}

message Field {
    string _id = 1;
    string name = 2;
    string description = 3;
    string slug = 4;
    int32 order_number = 5;
    int32 status = 6;
    string created_at = 7;
    bool is_required = 8;
    string placeholder = 9;
    string field_type = 10;
    repeated SelectType select_type = 11;
    string validation_regex = 12;
    string validation_func = 13;
    string group_id = 14;
    string updated_at = 15;
    int32 min = 16;
    int32 max = 17;
    string default_value = 18;
    int32 is_searchable = 19;
    bool is_array = 20;
}

message SelectType {
    string _id = 1;
    string name = 2;
    string description = 3;
    string value = 4;
    string value_type = 5;
}

message GetAllGroupRequest {
    int32 offset = 1;
    int32 limit = 2;
    string sort = 3;
    string order = 4;
    string search = 5;
    string parent_id = 6;
    int32 group_type = 7;
    string slug = 8;
}

message GetAllGroupResponse {
    repeated Group groups = 1;
    int32 count = 2;
}

message GetAllFieldRequest {
    int32 offset = 1;
    int32 limit = 2;
    string sort = 3;
    string order = 4;
    string search = 5;
    string group_id = 6;
    string field_type = 7;
    string slug = 8;
}

message GetAllFieldResponse {
    repeated Field fields = 1;
    int32 count = 2;
}
